Entrega de trabajo de la clase Nº3

--- a/Actividad 3.html
+++ b/Actividad 3.html
@@ -21,7 +21,7 @@
                 <li> <a href="./Home"> Paquetes Turísticos </a> </li>
                 <li> <a href="./Home"> Excursiones  </a></li>
                 <li> <a href="./Home"> Salidas grupales </a> </li>
-                <li> <a href="Contacto"> Contacto </a></li>
+                <li> <a href="./Contacto3.html"> Contacto </a></li>
                 <li> 
                     <a href="./Actividad 2.html">
                     Horarios de atención
