--- a/Actividad 6.html
+++ b/Actividad 6.html
@@ -2,11 +2,14 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title> Abu Dhabi Turismo y Viajes </title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet'  href='../css/styleact5.css'>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="../JavaScript/UntJPSACT10.js"> </script> 
+
 </head>
 
 <body>
@@ -38,21 +41,28 @@
     
     <main>
 
-        <section>
+        <section class="visual1">
             <h2> Encontra paquetes inperdibles </h2>
-            <h3> ¿A donde quéres ir? </h3>
-            <input type="text" name="Ciudad, país o región "
-            placeholder="Ingresá ciudad, país o región">
-
-            <h3> Fechas </h3>
-            <input type="date" name="Fecha de entrada">
-            <input type="date" name="Decha de salida">
+            <div class="celdaInput">
+                <label class="labelInput" for="origen">Seleccione origen</label>
+                <input type="text" id="origen" placeholder="Origen">
+            </div>
+            <div class="celdaInput">
+                <label class="labelInput" for="origen">Seleccione origen</label>
+                <input type="text" id="destino" placeholder="Destino">
+            </div>
+            <div class="celdaInput">
+                <input type="datetime" placeholder="Elegi tu fecha">
+                <input type="submit" value="Buscar">
+            </div>
         </section>
 
 
 
         <h2> ¡Nuevas Salidas Regulares Garantizadas! </h2> 
 
+        <div class="principalContent"></div>
+        <main class="main"> 
         <h3> 
             <b> Ciudad de México </b>
         </h3> 
@@ -107,6 +117,7 @@
                 <input type="button" name="Reservar" value="Reservar">
          </section>
     </main>
+</div>
 
     <br>
     <br>
